<resources>
    <string name="app_name">HanaeDroidBurger</string>
    <string name="enter_your_firstname">Entrez votre prénom</string>
    <string name="enter_lastname">Entrez votre nom de famille</string>
    <string name="enter_address">Entrez votre adresse</string>
    <string name="enter_phone">Entrez votre numéro de téléphone</string>
    <string name="select_burger">Sélectionnez un burger</string>
    <string name="delivery_time">Heure de livraison</string>
    <string name="create_order"> Passer la commande</string>
    <string name="repasser_commande"> Repasser une autre commande</string>
</resources>